logs/fast_slow/dog120/fast_slow_dog(8).log
  File "/home/hdl/project/fgvr_test/discovering.py", line 404
    """
    ^
IndentationError: expected an indented block
